Closed Bug 1632059 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::widget::WaylandDisplayGet]

Categories

(Core :: Audio/Video: Playback, defect)

77 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox-esr68 --- unaffected
firefox75 --- unaffected
firefox76 --- unaffected
firefox77 + fixed

People

(Reporter: calixte, Assigned: stransky)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files)

This bug is for crash report bp-e70f27cb-b559-4d05-9698-717250200422.

Top 10 frames of crashing thread:

0 libxul.so mozilla::widget::WaylandDisplayGet widget/gtk/nsWaylandDisplay.cpp:129
1 libxul.so mozilla::FFmpegVideoDecoder<58>::CreateVAAPIDeviceContext dom/media/platforms/ffmpeg/FFmpegVideoDecoder.cpp:181
2 libxul.so mozilla::FFmpegVideoDecoder<58>::InitVAAPIDecoder dom/media/platforms/ffmpeg/FFmpegVideoDecoder.cpp:235
3 libxul.so mozilla::FFmpegVideoDecoder<58>::Init dom/media/platforms/ffmpeg/FFmpegVideoDecoder.cpp:320
4 libxul.so mozilla::detail::ProxyFunctionRunnable<mozilla::MediaChangeMonitor::Init xpcom/threads/MozPromise.h:1460
5 libxul.so mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:207
6 libxul.so nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:300
7 libxul.so non-virtual thunk to nsThreadPool::Run xpcom/threads/nsThreadPool.cpp
8 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1200
9 libxul.so mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:332

There are 3 crashes (from 3 installations) in nightly 77 with buildid 20200421222503. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1630754.

[1] https://hg.mozilla.org/mozilla-central/rev?node=c159181ff5d0

Flags: needinfo?(stransky)

Great, Thanks! I'll do a patch asap.

Assignee: nobody → stransky
Flags: needinfo?(stransky)
Pushed by cbrindusan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2e638f8a11df [Wayland] Use wayland display directly for va-api, r=jhorak
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Attached file about:support.txt

I've been experiencing this crash (actually, I don't know if it's the same crash, in case it's a different one, I can open a new bug) a few times a day since DevEdition updated to 79. about:support attached, including crash reports.

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: