Bug 1632059 [Wayland] Use wayland display directly for va-api, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D72122